--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         text-align: center;
         width: 600px;
         margin: 300px auto;
+        color: red;
       }
     </style>
   </head>
@@ -17,5 +18,6 @@
       An Express.js application deployed by
       <a href="https://serverlesscloud.cn/">Serverless Framework.</a>
     </h1>
+    <h1>Serverless vue3 订餐系统！</h1>
   </body>
 </html>
